force-app/main/default/objects/Transaction__c/fields/Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Investment_Amount__c</fullName>
    <formula>Lots_Purchased__c  *  Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>