force-app/main/default/objects/Transaction__c/fields/Investor__c.field-meta.xml
<CustomField>
    <fullName>Investor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Who made this investment</description>
    <label>Investor</label>
    <referenceTo>Investor__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>