force-app/main/default/objects/Transaction__c/fields/Investor_Name__c.field-meta.xml
<CustomField>
    <fullName>Investor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investor Name</label>
    <referenceTo>Investor__c</referenceTo>
    <relationshipLabel>Transactions (Investor Name)</relationshipLabel>
    <relationshipName>Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>