force-app/main/default/objects/Transaction__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which lot was purchased</description>
    <label>Lot</label>
    <referenceTo>Investment_Lot__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>