force-app/main/default/objects/Transaction__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <formula>(Lots_Purchased__c / Property__r.Total_Lots__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownership %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>