force-app/main/default/objects/Transaction__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>