force-app/main/default/objects/Transaction__c/fields/Requested_Withdrawal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Withdrawal_Amount__c</fullName>
    <label>Requested Withdrawal Amount</label>
    <precision>17</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>