force-app/main/default/objects/Transaction__c/validationRules/Prevent_Negative_Lot_Purchase.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Negative_Lot_Purchase</fullName>
    <active>true</active>
    <description>No Buyer can buy less than 1 Lot</description>
    <errorConditionFormula>Lots_Purchased__c &lt;= 0</errorConditionFormula>
    <errorMessage>You must Purchase atleast 1 Lot</errorMessage>
</ValidationRule>