force-app/main/default/objects/Transaction__c/validationRules/Prevent_Over_Allocation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Over_Allocation</fullName>
    <active>true</active>
    <description>To ensure that purchase limits do not exceed 100 percent of ownership.</description>
    <errorConditionFormula>(Property__r.Total_Lots_Purchased__c + Lots_Purchased__c) &gt; Property__r.Total_Lots__c</errorConditionFormula>
    <errorDisplayField>Lots_Purchased__c</errorDisplayField>
    <errorMessage>Cannot allocate lots. Total lots purchased would exceed property total.</errorMessage>
</ValidationRule>