force-app/main/default/objects/Transaction__c/validationRules/Prevent_Over_Purchase.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Over_Purchase</fullName>
    <active>true</active>
    <errorConditionFormula>Lots_Purchased__c &gt; Property__r.Available_Lots__c</errorConditionFormula>
    <errorDisplayField>Lots_Purchased__c</errorDisplayField>
    <errorMessage>You cannot purchase more lots than are available for this Property.</errorMessage>
</ValidationRule>